[project]
name = "fep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.5.40",
    "pytest>=8.3.4",
    "markdown>=3.7",
    "pytest-watcher>=0.4.3",
    "markdown-callouts>=0.4.0",
    "fep",
    "nh3>=0.3.0",
]

[tool.setuptools]
packages = ["fep_tools"]
