[project]
name = "fepd8c8"
version = "0.1.0"
description = "Reference implementation for FEP-d8c8"
authors = [
    {name = "sneakers-the-rat", email = "sneakers-the-rat@protonmail.com"},
]
dependencies = ["bencode-rs>=0.0.7"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "CC-0"}

[project.scripts]
fepd8c8 = "fepd8c8.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
